--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -3,19 +3,30 @@ on:
   push:
     branches:
       - main
+      - deploy/test
 
 jobs:
   build:
     runs-on: ubuntu-22.04
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
-      - name: Setup go
-        uses: actions/setup-go@v4
-        with:
-          go-version: '1.20'
+#      - name: Setup go
+#        uses: actions/setup-go@v4
+#        with:
+#          go-version: '1.20'
+
+      - name: Generate mock file
+        run: go generate -v ./...
+
+      - name: Run unit testing
+        run: go test -v ./...
+
+      - name: Delete generated mock file
+        run: find . -type f -name 'mock_*' -delete
 
       - name: Build
         run: |
-          go build -o mini-project ./main.go
+          go build -o mp ./main.go
+        
