--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -17,11 +17,11 @@ jobs:
 #        with:
 #          go-version: '1.20'
 
-      - name: Generate mock file
-        run: go generate -v ./...
+      - name: Install mockery & generate mock file
+        run: go install github.com/vektra/mockery/v2@v2.20.0 && go generate -v ./...
 
-      - name: Run unit testing
-        run: go test -v ./...
+      - name: Run unit testinq
+        q
 
       - name: Delete generated mock file
         run: find . -type f -name 'mock_*' -delete
