--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -18,7 +18,9 @@ jobs:
 #          go-version: '1.20'
 
       - name: Generate mock file
-        run: go install github.com/vektra/mockery/v2@v2.20.0 && go generate -v ./...
+        run: |
+          go install github.com/vektra/mockery/v2@v2.20.0
+          go generate -v ./...
 
       - name: Run unit testing
         run: go test -v ./...
