--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -12,10 +12,10 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-#      - name: Setup go
-#        uses: actions/setup-go@v4
-#        with:
-#          go-version: '1.20'
+      - name: Setup go
+        uses: actions/setup-go@v4
+        with:
+          go-version: '1.20'
 
       - name: Generate mock file
         run: |
