--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -6,7 +6,7 @@ on:
       - deploy/test
 
 jobs:
-  build:
+  test:
     runs-on: ubuntu-22.04
     steps:
       - name: Checkout code
@@ -28,7 +28,30 @@ jobs:
       - name: Delete generated mock file
         run: find . -type f -name 'mock_*' -delete
 
-      - name: Build
-        run: |
-          go build -o mp ./main.go
-        
+  Docker-build:
+    runs-on: ubuntu-latest
+    needs: test
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Compose up
+        uses: isbang/compose-action@v1.4.1
+        with:
+          compose-file: "./docker-compose.yaml"
+      - name: Login to DockerHub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Build and push
+        id: docker_build
+        uses: docker/build-push-action@v2
+        with:
+          push: true
+          tags: |
+            1
+            1
+          build-args: |
+            1.0.0
