--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -3,19 +3,38 @@ on:
   push:
     branches:
       - main
-
+      - deploy/mini-project-3
 jobs:
-  build:
+  test:
     runs-on: ubuntu-22.04
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
       - name: Setup go
         uses: actions/setup-go@v4
         with:
           go-version: '1.20'
 
-      - name: Build
+      - name: Generate mock file
         run: |
-          go build -o mini-project ./main.go
+          go install github.com/vektra/mockery/v2@v2.20.0
+          go generate -v ./...
+
+      - name: Run unit testing
+        run: go test -v ./...
+
+      - name: Delete generated mock file
+        run: find . -type f -name 'mock_*' -delete
+
+  Docker-build:
+    runs-on: ubuntu-latest
+    needs: test
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Compose up
+        uses: isbang/compose-action@v1.4.1
+        with:
+          compose-file: "./docker-compose.yaml"
