--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -16,6 +16,9 @@ jobs:
         with:
           go-version: '1.20'
 
+      - name: Delete generated mock file if already exists
+        run: find . -type f -name 'mock_*' -delete
+
       - name: Generate mock file
         run: |
           go install github.com/vektra/mockery/v2@v2.20.0
